#8 removed unused dependencies; fixed warnings with Optional-class; added null check for source type in validation; switched to Quarkus 1.3.2.final; changed config-file format from properties to yml